// Vitest Snapshot v1

exports[`MdiIcon.ts > render a component 1`] = `
"<button type=\\"button\\" class=\\"mdi-icon light\\" style=\\"width: 24px; height: 24px; font-size: 24px; caret-color: inherit;\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" role=\\"img\\" aria-hidden=\\"true\\" style=\\"fill: currentColor;\\">
    <path d=\\"M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z\\"></path>
  </svg></button>"
`;

exports[`MdiIcon.ts > render a dark component 1`] = `
"<button type=\\"button\\" class=\\"mdi-icon dark\\" style=\\"width: 24px; height: 24px; font-size: 24px; caret-color: inherit;\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" role=\\"img\\" aria-hidden=\\"true\\" style=\\"fill: currentColor;\\">
    <path d=\\"M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z\\"></path>
  </svg></button>"
`;
